Added CS and PH Assignmnet-6

--- a/CS1101/Assignments/CS Assignments/002-A5.ipynb
+++ b/CS1101/Assignments/CS Assignments/002-A5.ipynb
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "e106024c",
    "metadata": {},
    "outputs": [
@@ -224,7 +224,6 @@
     "n=0\n",
     "while(abs(1-S)>=epsilon):\n",
     "    S+=a_sin(pi/2,n)\n",
-    "\n",
     "    n+=1\n",
     "print(f\"Actual value = 1\")\n",
     "print(f\"Computed value = %s \"%(S))\n",
@@ -257,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 5,
    "id": "7e75332a",
    "metadata": {},
    "outputs": [
@@ -265,16 +264,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of A's you want in the last row: 20\n",
-      "         AA\n",
-      "        AAAA\n",
-      "       AAAAAA\n",
-      "      AAAAAAAA\n",
-      "     AAAAAAAAAA\n",
-      "    AAAAAAAAAAAA\n",
-      "   AAAAAAAAAAAAAA\n",
-      "  AAAAAAAAAAAAAAAA\n",
-      " AAAAAAAAAAAAAAAAAA\n"
+      "Number of A's you want in the last row: 25\n",
+      "             \n",
+      "            A\n",
+      "           AAA\n",
+      "          AAAAA\n",
+      "         AAAAAAA\n",
+      "        AAAAAAAAA\n",
+      "       AAAAAAAAAAA\n",
+      "      AAAAAAAAAAAAA\n",
+      "     AAAAAAAAAAAAAAA\n",
+      "    AAAAAAAAAAAAAAAAA\n",
+      "   AAAAAAAAAAAAAAAAAAA\n",
+      "  AAAAAAAAAAAAAAAAAAAAA\n",
+      " AAAAAAAAAAAAAAAAAAAAAAA\n"
      ]
     }
    ],
@@ -375,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "cd4ba43d",
    "metadata": {},
    "outputs": [
@@ -438,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "id": "ce4bfd7e",
    "metadata": {},
    "outputs": [
@@ -485,14 +488,6 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c935a106",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "691dc1de",
    "metadata": {},
    "outputs": [],
    "source": []
