Multiple Lectures Added

--- a/MA1101/Personal Notes/Number Systems.tex
+++ b/MA1101/Personal Notes/Number Systems.tex
@@ -204,5 +204,7 @@
 	Hence, $P(k+1)$ is true whenever $P(n)$ is true for all $n=1,2,\dots,k$.
 	
 	By the second principle of induction, $P(n)$ is true for all natural numbers.
+	
+	\section{Integers}
 \end{document}
 
