--- a/MA1101/Personal Notes/Number Systems.tex
+++ b/MA1101/Personal Notes/Number Systems.tex
@@ -687,5 +687,10 @@ In the next Theorem \ref{theorem:rat}, we define the algebraic properties of $\Q
 	Now, $$[(mps+mqr, nqs)] = [(mpns + nqmr, nqns)]$$ as, $$mps \cdot nqns + mqr \cdot nqns = mpns \cdot nqs + nqmr \cdot nqs$$ 
 	$$mpsnqns + mqrnqns = mpnsnqs + nqmrnqs$$ (all the terms cancel out).
 \end{proof}
+
+	\section{Acknowledgement}
+	
+	I'd like to thank \href{https://web.evanchen.cc/}{Evan Chen} for providing/distributing the \emph{evan.sty} file for formatting/beautifying my \LaTeX\ document.
+	
 \end{document}
 
