--- a/CS1101/Assignments/CS Assignments/002-A1.ipynb
+++ b/CS1101/Assignments/CS Assignments/002-A1.ipynb
@@ -1121,8 +1121,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
-  }
+   "version": "3.10.2"
+  },
+  "notify_time": "5"
  },
  "nbformat": 4,
  "nbformat_minor": 5
